@@ -269,10 +269,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <argLine>
-                                --illegal-access=permit
                                 --add-opens java.base/java.lang=ALL-UNNAMED
                                 --add-opens java.base/java.util=ALL-UNNAMED
-                                -Dillegal-access=permit
                             </argLine>
                         </configuration>
                     </plugin>
@@ -318,10 +316,8 @@
                         <configuration>
                             <argLine>
                                 @{argLine}
-                                --illegal-access=permit
                                 --add-opens java.base/java.lang=ALL-UNNAMED
                                 --add-opens java.base/java.util=ALL-UNNAMED
-                                -Dillegal-access=permit
                             </argLine>
                         </configuration>
                     </plugin>
